# model-processing-service

./: Dockerfile  pyproject.toml
.github/workflows/: deploy.yml
app/: config.py  database.py  main.py  metrics.py  ml_service.py  repository.py  router.py  scheduler.py
tests/: ml_service_test.py
